--- a/css/freelancer.css
+++ b/css/freelancer.css
@@ -344,11 +344,17 @@ a:focus, a:hover, a:active {
 }
 
 .bg-primary {
-  background-color: #18BC9C !important;
+  background-color: #539987 !important;
+}
+
+.bg-image {
+  background-image:url("../img/bscreen.png");
+  background-attachment: fixed;
+  background-size: cover;
 }
 
 .bg-secondary {
-  background-color: #2C3E50 !important;
+  background-color: #355834 !important;
 }
 
 .text-primary {
@@ -360,21 +366,21 @@ a:focus, a:hover, a:active {
 }
 
 .btn-primary {
-  background-color: #18BC9C;
-  border-color: #18BC9C;
+  background-color: #539987;
+  border-color: #355834;
 }
 
 .btn-primary:hover, .btn-primary:focus, .btn-primary:active {
-  background-color: #128f76;
+  background-color: #447E6F;
   border-color: #128f76;
 }
 
 .btn-secondary {
-  background-color: #2C3E50;
-  border-color: #2C3E50;
+  background-color: #355834;
+  border-color: #355834;
 }
 
 .btn-secondary:hover, .btn-secondary:focus, .btn-secondary:active {
-  background-color: #1a252f;
-  border-color: #1a252f;
+  background-color: #355834;
+  border-color: #355834;
 }
